--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(94deg, rgba(101,140,175,1) 15%, rgba(67,77,185,1) 58%);
 }
 
 code {
